TestGenerator refactoring is done