@@ -9,16 +9,19 @@ import com.theokanning.openai.completion.chat.ChatCompletionRequest;
 import com.theokanning.openai.completion.chat.ChatCompletionResult;
 import com.theokanning.openai.completion.chat.ChatMessage;
 import com.theokanning.openai.service.OpenAiService;
-import lombok.RequiredArgsConstructor;
+import lombok.*;
+import lombok.extern.jackson.Jacksonized;
 import lombok.extern.slf4j.Slf4j;
+import one.util.streamex.StreamEx;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 import static com.example.aitestgenerator.utils.Utils.countTokens;
 import static com.example.aitestgenerator.utils.Utils.readFileContents;
@@ -29,68 +32,66 @@ import static com.example.aitestgenerator.utils.Utils.readFileContents;
 public class TestGenerator {
     private final ObjectMapper objectMapper;
     private final OpenAiService openAiService;
+    @Value("${generate-test.questions_group_size}")
+    public int questionsGroupSize;
 
     public Test start(Text text) {
-        List<ChatMessage> messages = new ArrayList<>();
-        List<CompletableFuture<Test>> futureTests = new ArrayList<>();
+        List<CompletableFuture<QuestionsDto>> futureQuestions = splitQuestionsIntoGroups(text)
+            .stream()
+            .map(group -> generateTestAsync(group, text))
+            .toList();
 
-        splitQuestionsIntoGroups(text, messages)
-            .forEach(group -> {
-                CompletableFuture<Test> futureTest = generateTestAsync(group, text, messages);
-                futureTests.add(futureTest);
-            });
+        List<Question> generatedQuestions = CompletableFuture.allOf(futureQuestions.toArray(new CompletableFuture[0]))
+            .thenApply(ignored -> futureQuestions.stream()
+                .map(CompletableFuture::join)
+                .map(QuestionsDto::getQuestions)
+                .flatMap(Collection::stream)
+                .toList())
+            .join();
 
-        CompletableFuture<Void> allOf = CompletableFuture.allOf(futureTests.toArray(new CompletableFuture[0]));
-
-        return allOf.thenApply(ignored -> {
-            List<Question> generatedQuestions = new ArrayList<>();
-            futureTests.forEach(futureTest -> generatedQuestions.addAll(futureTest.join().getQuestions()));
-
-            return Test.builder()
-                .title(text.getTitle())
-                .questions(generatedQuestions)
-                .userId(text.getUserId())
-                .build();
-        }).join();
+        return Test.builder()
+            .title(text.getTitle())
+            .questions(generatedQuestions)
+            .userId(text.getUserId())
+            .build();
     }
 
-    private CompletableFuture<Test> generateTestAsync(List<String> questionGroup, Text text, List<ChatMessage> messages) {
+    private CompletableFuture<QuestionsDto> generateTestAsync(List<String> questionGroup, Text text) {
         return CompletableFuture.supplyAsync(() -> {
             log.info("Generating Test. Text id: {}, User id: {}. Questions: {}", text.getId(), text.getUserId(), questionGroup);
-            String testJson = generateData(new ArrayList<>(messages), readFileContents("ai_prompts/generate_test.txt"), questionGroup.toString(), text);
+            TestDto testDto = new TestDto(text.getContent(), questionGroup);
+            String testJson = generateData(readFileContents("ai_prompts/generate_test.txt"), testDto.toString());
             try {
-                return objectMapper.readValue(testJson, Test.class);
+                return objectMapper.readValue(testJson, QuestionsDto.class);
             } catch (JsonProcessingException e) {
                 throw new RuntimeException(e);
             }
         });
     }
 
-    private List<List<String>> splitQuestionsIntoGroups(Text text, List<ChatMessage> messages) {
+    private List<List<String>> splitQuestionsIntoGroups(Text text) {
         log.info("Generating questions for text. Text id: {}, User id: {}", text.getId(), text.getUserId());
-        String questions = generateData(messages, readFileContents("ai_prompts/generate_questions.txt"), text.toString(), text);
+        String questions = generateData(readFileContents("ai_prompts/generate_questions.txt"), text.getContent());
         return parseQuestionGroups(questions, text);
     }
 
     private List<List<String>> parseQuestionGroups(String questions, Text text) {
         log.info("Parsing questions from string. Text id: {}, User id: {}", text.getId(), text.getUserId());
         List<String> questionList = Arrays.asList(questions.split("\n"));
-        int groupSize = 3;
 
-        return IntStream.range(0, questionList.size())
-            .filter(i -> i % groupSize == 0)
-            .mapToObj(i -> questionList.subList(i, Math.min(i + groupSize, questionList.size())))
-            .collect(Collectors.toList());
+        return StreamEx.ofSubLists(questionList, questionsGroupSize)
+            .toList();
     }
 
-    private String generateData(List<ChatMessage> messages, String request, String content, Text text) {
-        ChatMessage taskPrompt = createChatMessage(request);
+    private String generateData(String request, String content) {
+        List<ChatMessage> messages = new ArrayList<>();
         ChatMessage textPrompt = createChatMessage(content);
+        ChatMessage taskPrompt = createChatMessage(request);
 
-        messages.add(taskPrompt);
         messages.add(textPrompt);
+        messages.add(taskPrompt);
 
-        log.info("Sending prompt to AI. Text id: {}, User id: {}", text.getId(), text.getUserId());
+        log.info("Sending prompt to AI");
 
         ChatCompletionResult chatCompletionResult = openAiService.createChatCompletion(buildChatCompletionRequest(messages));
 
@@ -115,8 +116,6 @@ public class TestGenerator {
             .model("gpt-3.5-turbo-16k-0613")
             .messages(chatMessages)
             .maxTokens(maxTokens)
-            .temperature(1.0)
-            .topP(1.0)
             .build();
     }
 
@@ -125,5 +124,25 @@ public class TestGenerator {
         message.setContent(content);
         message.setRole("user");
         return message;
+    }
+
+    @Jacksonized
+    @Builder
+    @lombok.Value
+    static class QuestionsDto {
+        List<Question> questions;
+    }
+
+
+    @AllArgsConstructor
+    @lombok.Value
+    static class TestDto {
+        String textContent;
+        List<String> questions;
+        @Override
+        public String toString() {
+            return "text='" + textContent +
+                "\nquestions=" + String.join(" ", questions);
+        }
     }
 }
